Website update 22-03-2025 06:30 PM

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,6 +85,26 @@
   .hover-gradient-amber {
     @apply hover:bg-gradient-to-r hover:from-amber-500 hover:to-amber-700;
   }
+
+  /* Add these aspect ratio utilities */
+  .aspect-w-16 {
+    position: relative;
+    padding-bottom: 56.25%;
+  }
+
+  .aspect-h-9 {
+    position: relative;
+  }
+
+  .aspect-w-16 > *, .aspect-h-9 > * {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 }
 
 [data-theme="light"] {
